更新了项目融资列表问题。 更换了验证码控件。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.jackson.time-zone=GMT+8
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+#\u95E8\u6237\u767B\u5F55\u9A8C\u8BC1\u7801\u9A8C\u8BC1\u7F51\u5740(post)
+lsmValidateAddr=https://captcha.luosimao.com/api/site_verify
+
+#\u95E8\u6237\u9A8C\u8BC1\uFF0C\u9A8C\u8BC1\u7801\u662F\u5426\u6B63\u786E\u5730\u5740api key
+apiKey=7a2b8e23e8d4ffa3e70bb249839d151f
